--- a/index.html
+++ b/index.html
@@ -100,38 +100,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="container">
-            <div class="row sr-icons">
-                <div class="col-sm-3 col-xs-12 text-center ">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-road text-primary"></i>
-                        <h3>Route Studies & Consultation</h3>
-                        <p class="text-muted"></p>
-                    </div>
-                </div>
-                <div class="col-sm-3 col-xs-12 text-center ">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-suitcase text-primary"></i>
-                        <h3>Receiving, Inspection & Warehousing</h3>
-                        <p class="text-muted"></p>
-                    </div>
-                </div>
-                <div class="col-sm-3 col-xs-12 text-center ">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-ship text-primary"></i>
-                        <h3>Freight Forwarding</h3>
-                        <p class="text-muted"></p>
-                    </div>
-                </div>
-                <div class="col-sm-3 col-xs-12 text-center ">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-truck text-primary"></i>
-                        <h3>Last Mile Delivery</h3>
-                        <p class="text-muted"></p>
-                    </div>
-                </div>
-            </div>
-        </div> -->
     </section>
 
     <section id="portfolio">
@@ -240,7 +208,7 @@
                 <div class="col-xs-12 text-center">
                     <br />
                     <br />
-                    <a href="project-logistics.html" class="page-scroll btn btn-primary btn-xl sr-button text-center">Learn More</a>
+                    <a href="corporate-relocation.html" class="page-scroll btn btn-primary btn-xl sr-button text-center">Learn More</a>
                 </div>
             </div>
 
