Combined all docs in this directory

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Kinetix International Logistics: Relocations</title>
+    <title>Kinetix International Logistics</title>
 
     <!-- Bootstrap Core CSS -->
     <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
@@ -18,8 +18,8 @@
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'> -->
 
     <!-- Trying out the Google Raleway Font. -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,400,500" rel="stylesheet">
@@ -75,258 +75,96 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <header>
+    <header class="landing-page">
         <div class="header-content">
             <div class="header-content-inner">
                 <h1 id="homeHeading" class="animated fadeInDown" style="font-weight: 100">The Power of Moving,</h1>
-                <h1 id="homeHeading" class="animated fadeInDelay" style="font-weight: 100">Forward.</h1>
-
+                <h1 class="animated fadeInDelay" style="font-weight: 100">Forward.</h1>
+                <h3 class="animated fadeInDelay2">
+                  Kinetix International is an experienced supply chain management and logistics company with core competencies in the areas of Corporate Relocation Management, Domestic & International Household Goods and Moving, and Cargo Logistics Sourcing.
+                </h3>
                 <br />
-                <a href="#services" class="page-scroll fa fa-4x fa-angle-double-down animated fadeInDelay2 pulse   infinite"></a>
-
+                <a href="#intro" class="page-scroll btn btn-primary btn-xl text-center animated fadeInDelay2">Learn More</a>
             </div>
         </div>
     </header>
 
 
 
-    <section id="services">
-        <div class="container">
-            <div class="row sr-icons">
-                <div class="col-xs-12 text-center">
-                    <h1 class="section-heading">At Your Service</h1>
-                    <hr class="primary">
-                    <p>Kinetix International is an experienced supply chain management and logistics company with core competencies in the areas of Corporate Relocation Management, Domestic & International Household Goods and Moving, and Cargo & Logistics Sourcing.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="portfolio">
+    <!-- <section id="introduction">
         <div class="container-fluid">
-            <div class="row no-padding sr-icons">
-                <div class="no-padding col-md-6 col-xs-12 ">
-                    <a href="#projectLogistics" class="portfolio-box page-scroll">
-                        <img src="img\commericalRelocation\conference_room_thumb.jpeg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                </div>
-                                <div class="project-name">
-                                    Corporate Relocation
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="no-padding no-padding col-md-6 col-xs-12 ">
-                    <a href="#mobilizations" class="portfolio-box page-scroll">
-                        <img src="img\householdGoods\living-room-thumb.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption" style="background: rgba(254, 123, 7, 0.9);">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-
-                                </div>
-                                <div class="project-name">
-                                    Household Goods
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-            </div>
-        </div>
-    </section>
-    <div>
-
-    </div>
-    <section id="projectLogistics">
-        <div class="container">
-            <div class="row sr-icons">
-                <div class="col-md-12 text-center">
-                    <h1 class="section-heading">Corporate Relocation</h1>
-                    <hr class="primary">
-                    <p>
-                        Kinetix Relocation specializes in the design and delivery of innovative programs for corporations of all sizes. Whether our clients transfer the occasional new hire or have a mature program that relocates senior executives on a regular basis, Kinetix is prepared to deliver a best in class process to ensure a smooth and cost effective move anywhere in the world.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row sr-icons">
-                <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-road text-primary"></i>
-                        <h3>Policy Consultation</h3>
-                        <p class="text-muted"></p>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-check-square text-primary"></i>
-                        <h3>Origin Services</h3>
-                        <p class="text-muted"></p>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-archive text-primary"></i>
-                        <h3>Destination Services</h3>
-                        <p class="text-muted"></p>
-
-                    </div>
-                </div>
-                <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-ship text-primary"></i>
-                        <h3>International Services</h3>
-                        <p class="text-muted"></p>
-
-                    </div>
-                </div>
-                <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-file-text text-primary"></i>
-                        <h3>Tax & Expense Management</h3>
-                        <p class="text-muted"></p>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-truck text-primary"></i>
-                        <h3>Custom Reporting</h3>
-                        <p class="text-muted"></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="container">
             <div class="row sr-icons">
                 <div class="col-xs-12 text-center">
-                    <br />
-                    <br />
-                    <a href="corporate-relocation.html" class="page-scroll btn btn-primary btn-xl sr-button text-center">Learn More</a>
+                    <h2>Kinetix International is an experienced supply chain management and logistics company with core competencies in the areas of Corporate Relocation Management, Domestic & International Household Goods and Moving, and Cargo & Logistics Sourcing.</h2>
                 </div>
             </div>
-
         </div>
+    </section> -->
+    <section id="intro" style="background-color: rgb(251, 248, 232);">
 
-        <br />
-        <br />
-
-    </section>
-
-
-        <div class="parallax-project-logistics"></div>
-
-
-        <div class="project-logistics-sub no-padding"></div>
-
-
-
-
-
-
-    <section id="mobilizations">
-        <div class="container">
-            <div class="row sr-icons">
+        <div class="container sr-contact">
+            <div class="row">
                 <div class="col-md-12 text-center">
-                    <h1 class="section-heading">Household Goods</h1>
-                    <hr class="primary">
-                    <p>
-                        Kinetix International Logistics’ Household Goods Management Division specializes in the design and delivery of innovative transportation programs for Fortune 500 and emerging growth corporations, NGO’s and governmental agencies and third party relocation management companies worldwide.
-                    </p>
+                    <h2>Corporate Relocation & Household Goods</h2>
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="row sr-icons">
-                <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-road text-primary"></i>
-                        <h3>Policy Consultation</h3>
-                        <p class="text-muted"></p>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-check-square text-primary"></i>
-                        <h3>Pre-Move Surveys</h3>
-                        <p class="text-muted"></p>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-archive text-primary"></i>
-                        <h3>Independent Van Line Affiliations</h3>
-                        <p class="text-muted"></p>
-
-                    </div>
-                </div>
-                <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-ship text-primary"></i>
-                        <h3>Risk Management</h3>
-                        <p class="text-muted"></p>
-
-                    </div>
-                </div>
-                <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-file-text text-primary"></i>
-                        <h3>International Services</h3>
-                        <p class="text-muted"></p>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-truck text-primary"></i>
-                        <h3>Custom Reporting</h3>
-                        <p class="text-muted"></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row sr-icons">
+            <hr>
+            <div class="row">
                 <div class="col-md-12 text-center">
+                    <img class="img-responsive center-block" src="img/png-icons/Home.png">
+                </div>
+                <div class="col-md-12 text-center">
+                    <h3>Kinetix International Logistics’ Household Goods Management Division specializes in the design and delivery of innovative transportation programs for Fortune 500 and emerging growth corporations, NGO’s and governmental agencies and third party relocation management companies worldwide.</h3>
+                  </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 text-center">
                     <br />
-                    <br />
-                    <a href="household-goods.html" class="page-scroll btn btn-primary btn-xl  text-center">Learn More</a>
+
+                    <a href="kinetix-relocation.html" class="page-scroll btn btn-primary btn-xl text-center">Learn More</a>
                 </div>
             </div>
-
         </div>
-
-        <br />
-        <br />
-    </section>
-    <div class="parallax-mobilizations"></div>
-<div class="mobilizations-sub"></div>
+</section>
+<section style="background-color: rgb(220, 237, 249)">
 
 
+        <div class="container sr-contact">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h2>Special Projects & Cargo Logistics</h2>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <img class="img-responsive center-block" src="img/png-icons/Tools.png">
+                </div>
+                <div class="col-md-12 text-center">
+                    <h3>
+Kinetix International Logistics’ Project Cargo and Logistics division specializes in the design and implementation of freight forwarding, warehousing and supply chain management solutions for US government agencies and their contractors operating in developing countries. </h3></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <br />
 
-
-
-
-
-    <!--<aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a>
+                    <a href="kinetix-cargo.html" class="page-scroll btn btn-primary btn-xl text-center">Learn More</a>
+                </div>
             </div>
         </div>
-    </aside> -->
+</section>
+
+
+
+
+
+
 
     <section id="contact">
-        <div class="container">
+        <div class="container sr-contact">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center">
-                    <h2 class="section-heading">Intersted in getting things started, today?</h2>
+                    <h1 class="section-heading">Intersted in getting things started, today?</h1>
                     <hr class="primary">
                     <h4>Contact us via phone or email! A new, efficient, and modern process is closer than you think!</h4>
                 </div>
