Connected all pages

--- a/about.html
+++ b/about.html
@@ -75,14 +75,14 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <header>
+    <header id="about-page-header">
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading" class="animated fadeInDown" style="font-weight: 100">A LITTLE INTRODUCTION</h1>
-                <hr>
-                <br />
-                <a href="#services" class="page-scroll fa fa-4x fa-angle-double-down animated fadeIn pulse infinite"></a>
+              <h1 id="homeHeading" class="animated fadeInDown" style="font-weight: 100">WELCOME,</h1>
+              <h1 id="homeHeading" class="animated fadeInDelay" style="font-weight: 100">TO OUR WORLD</h1>
 
+              <br />
+              <a href="#services" class="page-scroll fa fa-4x fa-angle-double-down animated fadeInDelay2 pulse   infinite"></a>
             </div>
         </div>
     </header>
@@ -98,8 +98,11 @@
                     <hr>
 
                     <h2>
-Kinetix was founded by an industry leader with a team established in 1986 that has worked together for up to 20 years. Our vendor and client relationships cover every country in the world and have existed for up to 30 years. Clients include corporations, U.S. and foreign governments, and global non-governmental organizations.
+Kinetix was founded by an industry leader with a team established in 1986 that has worked together for up to 20 years.
 </h2><br />
+<p>
+  Our vendor and client relationships cover every country in the world and have existed for up to 30 years. Clients include corporations, U.S. and foreign governments, and global non-governmental organizations.
+</p>
 
                     <p>
                         These relationships reflect the trust our clients have in Kinetix and our integrity, consistency, and expertise. Our incredibly high employee retention proves that our core values guide our operations every day. Our employees grow with our clients, and
