--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <header class="landing-page">
+    <header id="landing-page-header">
         <div class="header-content">
             <div class="header-content-inner">
                 <h1 id="homeHeading" class="animated fadeInDown" style="font-weight: 100">The Power of Moving,</h1>
