--- a/kinetix-cargo.html
+++ b/kinetix-cargo.html
@@ -75,7 +75,7 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <header>
+    <header id="cargo-page-header">
         <div class="header-content">
             <div class="header-content-inner">
                 <h1 id="homeHeading" class="animated fadeInDown" style="font-weight: 100">Special Projects</h1>
@@ -171,51 +171,39 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row sr-icons">
-                <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-road text-primary"></i>
+        <div class="container-fluid">
+            <div class="row-fluid sr-icons">
+              <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
+                      <img class="img-responsive img center-block" src="img/png-icons/Bookmark.png">
                         <h3>Route Studies  Consultation</h3>
                         <p class="text-muted"></p>
-                    </div>
                 </div>
-                <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-check-square text-primary"></i>
+                <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
+                      <img class="img-responsive img center-block" src="img/png-icons/Thumb_Up.png">
                         <h3>Export Compliance</h3>
                         <p class="text-muted"></p>
-                    </div>
                 </div>
-                <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-archive text-primary"></i>
+                <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
+                      <img class="img-responsive img center-block" src="img/png-icons/Search.png">
                         <h3>Receiving, Inspection, & Warehousing</h3>
                         <p class="text-muted"></p>
 
-                    </div>
                 </div>
-                <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-ship text-primary"></i>
+                <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
+                      <img class="img-responsive img center-block" src="img/png-icons/Compass.png">
                         <h3>Freight Forwarding</h3>
                         <p class="text-muted"></p>
 
-                    </div>
                 </div>
-                <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-file-text text-primary"></i>
+                <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
+                      <img class="img-responsive img center-block" src="img/png-icons/Download.png">
                         <h3>Reporting & Tracking System</h3>
                         <p class="text-muted"></p>
-                    </div>
                 </div>
-                <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-truck text-primary"></i>
+                <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
+                      <img class="img-responsive img center-block" src="img/png-icons/Shopping.png">
                         <h3>Last Mile Delivery</h3>
                         <p class="text-muted"></p>
-                    </div>
                 </div>
             </div>
         </div>
@@ -237,10 +225,10 @@
     </section>
 
 
-    <div class="parallax-project-logistics"></div>
+    <div class="parallax-cargo-1"></div>
 
 
-    <div class="project-logistics-sub no-padding"></div>
+    <div class="parallax-cargo-1-sub no-padding"></div>
 
 
 
@@ -260,37 +248,29 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row sr-icons">
-                <div class="col-sm-3 col-xs-12 text-center ">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-briefcase text-primary"></i>
+        <div class="container-fluid">
+            <div class="row-fluid sr-icons">
+              <div class="col-xs-12 col-sm-3 text-center">
+                <img class="img-responsive img center-block" src="img/png-icons/Document.png">
                         <h3>Policy Consultation</h3>
                         <p class="text-muted"></p>
-                    </div>
                 </div>
-                <div class="col-sm-3 col-xs-12 text-center ">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-map-marker text-primary"></i>
+                <div class="col-xs-12 col-sm-3 text-center">
+                  <img class="img-responsive img center-block" src="img/png-icons/Map.png">
                         <h3>Global Origin & Destination Services</h3>
                         <p class="text-muted"></p>
-                    </div>
                 </div>
-                <div class="col-sm-3 col-xs-12 text-center ">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-plane text-primary"></i>
+                <div class="col-xs-12 col-sm-3 text-center">
+                  <img class="img-responsive img center-block" src="img/png-icons/Home.png">
                         <h3>Household Goods Transport</h3>
                         <p class="text-muted"></p>
 
-                    </div>
                 </div>
-                <div class="col-sm-3 col-xs-12 text-center ">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-puzzle-piece text-primary"></i>
+                <div class="col-xs-12 col-sm-3 text-center">
+                  <img class="img-responsive img center-block" src="img/png-icons/Printer.png">
                         <h3>Customs Reporting</h3>
                         <p class="text-muted"></p>
 
-                    </div>
                 </div>
 
             </div>
@@ -310,8 +290,8 @@
         <br />
         <br />
     </section>
-    <div class="parallax-mobilizations"></div>
-    <div class="mobilizations-sub"></div>
+    <div class="parallax-cargo-2"></div>
+    <div class="parallax-cargo-2-sub no-padding"></div>
 
 
     <section id="supplyChain">
@@ -331,21 +311,21 @@
             <div class="row">
                 <div class="col-sm-3 col-xs-12 text-center ">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-pie-chart text-primary"></i>
+                      <img class="img-responsive img center-block" src="img/png-icons/Database.png">
                         <h3>Nationwide Inventory Management</h3>
                         <p class="text-muted"></p>
                     </div>
                 </div>
                 <div class="col-sm-3 col-xs-12 text-center ">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-shopping-bag text-primary"></i>
+                      <img class="img-responsive img center-block" src="img/png-icons/Shopping.png">
                         <h3>International Commodities</h3>
                         <p class="text-muted"></p>
                     </div>
                 </div>
                 <div class="col-sm-3 col-xs-12 text-center ">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-map text-primary"></i>
+                      <img class="img-responsive img center-block" src="img/png-icons/Calendar.png">
                         <h3>LTL and FTL Shipments</h3>
                         <p class="text-muted"></p>
 
@@ -353,7 +333,7 @@
                 </div>
                 <div class="col-sm-3 col-xs-12 text-center ">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-fighter-jet text-primary"></i>
+                      <img class="img-responsive img center-block" src="img/png-icons/Trophy.png">
                         <h3>Trade Show</h3>
                         <p class="text-muted"></p>
 
@@ -377,8 +357,8 @@
         <br />
         <br />
     </section>
-    <div class="parallax-supply-chain"></div>
-    <div class="supply-chain-sub"></div>
+    <div class="parallax-cargo-3"></div>
+    <div class="parallax-cargo-3-sub no-padding"></div>
 
 
 
