--- a/kinetix-relocation.html
+++ b/kinetix-relocation.html
@@ -75,7 +75,7 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <header>
+    <header id="relocation-page-header">
         <div class="header-content">
             <div class="header-content-inner">
                 <h1 id="homeHeading" class="animated fadeInDown" style="font-weight: 100">Corporate Relocation </h1>
@@ -158,51 +158,39 @@
         </div>
         <div class="container-fluid">
             <div class="row-fluid sr-icons">
-                <div class="col-xs-6 col-sm-4 col-lg-2 text-center">
-                    <div class="service-box">
+                <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
                         <img class="img-responsive img center-block" src="img/png-icons/Document.png">
                         <h3>Policy Consultation</h3>
                         <p class="text-muted"></p>
-                    </div>
                 </div>
-                <div class="col-xs-6 col-sm-4 col-lg-2 text-center">
-                    <div class="service-box">
+                <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
                       <img class="img-responsive img center-block" src="img/png-icons/Home.png">
                         <h3>Origin Services</h3>
                         <p class="text-muted"></p>
-                    </div>
                 </div>
 
-                  <div class="col-xs-6 col-sm-4 col-lg-2 text-center">
-                      <div class="service-box">
+                  <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
                         <img class="img-responsive img center-block" src="img/png-icons/Map.png">
                           <h3>Destination Services</h3>
                           <p class="text-muted"></p>
 
-                      </div>
                   </div>
-                  <div class="col-xs-6 col-sm-4 col-lg-2 text-center">
-                      <div class="service-box">
+                  <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
                         <img class="img-responsive img center-block" src="img/png-icons/Compass.png">
                           <h3>International Services</h3>
                           <p class="text-muted"></p>
 
-                      </div>
                   </div>
 
-                  <div class="col-xs-6 col-sm-4 col-lg-2 text-center">
-                      <div class="service-box">
+                  <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
                         <img class="img-responsive img center-block" src="img/png-icons/Tag.png">
                           <h3>Tax & Expense Management</h3>
                           <p class="text-muted"></p>
-                      </div>
                   </div>
-                  <div class="col-xs-6 col-sm-4 col-lg-2 text-center">
-                      <div class="service-box">
+                  <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
                         <img class="img-responsive img center-block" src="img/png-icons/Printer.png">
                           <h3>Custom Reporting</h3>
                           <p class="text-muted"></p>
-                      </div>
                   </div>
                 </div>
 
@@ -226,10 +214,10 @@
     </section>
 
 
-    <div class="parallax-project-logistics"></div>
+    <div class="parallax-relocation-1"></div>
 
 
-    <div class="project-logistics-sub no-padding"></div>
+    <div class="parallax-relocation-1-sub no-padding"></div>
 
 
 
@@ -251,48 +239,36 @@
         </div>
         <div class="container-fluid">
             <div class="row-fluid sr-icons">
-              <div class="col-xs-6 col-sm-4 col-lg-2 text-center">
-                  <div class="service-box">
+              <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
                       <img class="img-responsive img center-block" src="img/png-icons/Document.png">
                       <h3>Policy Consultation</h3>
 
-                  </div>
               </div>
-              <div class="col-xs-6 col-sm-4 col-lg-2 text-center">
-                  <div class="service-box">
+              <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
                       <img class="img-responsive img center-block" src="img/png-icons/Mail3.png">
                       <h3>Pre-Move Surveys</h3>
 
-                  </div>
               </div>
-              <div class="col-xs-6 col-sm-4 col-lg-2 text-center">
-                  <div class="service-box">
+              <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
                       <img class="img-responsive img center-block" src="img/png-icons/Thumb_Up.png">
                       <h3>Independent Van Line Affiliations</h3>
 
-                  </div>
               </div>
-              <div class="col-xs-6 col-sm-4 col-lg-2 text-center">
-                  <div class="service-box">
+              <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
                       <img class="img-responsive img center-block" src="img/png-icons/Lock.png">
                       <h3>Risk Management</h3>
 
-                  </div>
               </div>
-              <div class="col-xs-6 col-sm-4 col-lg-2 text-center">
-                  <div class="service-box">
+              <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
                     <img class="img-responsive img center-block" src="img/png-icons/Compass.png">
                       <h3>International Services</h3>
 
 
-                  </div>
               </div>
-              <div class="col-xs-6 col-sm-4 col-lg-2 text-center">
-                  <div class="service-box">
+              <div class="col-xs-12 col-sm-4 col-lg-2 text-center">
                     <img class="img-responsive img center-block" src="img/png-icons/Printer.png">
                       <h3>Custom Reporting</h3>
 
-                  </div>
               </div>
             </div>
         </div>
@@ -310,8 +286,10 @@
         <br />
         <br />
     </section>
-    <div class="parallax-mobilizations"></div>
-    <div class="mobilizations-sub"></div>
+    <div class="parallax-relocation-2"></div>
+
+
+    <div class="parallax-relocation-2-sub no-padding"></div>
 
 
 
