--- a/kinetix-relocation.html
+++ b/kinetix-relocation.html
@@ -105,8 +105,8 @@
 
     <section id="portfolio">
         <div class="container-fluid">
-            <div class="row no-padding">
-                <div class="no-padding col-md-6 col-xs-12 sr-icons ">
+            <div class="row-fluid no-padding">
+                <div class="no-padding col-md-6 col-xs-12 ">
                     <a href="#projectLogistics" class="portfolio-box page-scroll">
                         <img src="img\commericalRelocation\conference_room_thumb.jpeg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -121,7 +121,7 @@
                     </a>
                 </div>
 
-                <div class="no-padding col-md-6 col-xs-12 sr-icons ">
+                <div class="no-padding col-md-6 col-xs-12">
                     <a href="#mobilizations" class="portfolio-box page-scroll">
                         <img src="img\householdGoods\living-room-thumb.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption" style="background: rgba(254, 123, 7, 0.9);">
